# shared_exponent_formats

./: Cargo.toml  README.md
src/: custom_shared_format.rs  evaluate.rs  evaluate_f64.rs  lib.rs  rgb9e5.rs  xyz13e6.rs  xyz14e3.rs  xyz18e7.rs  xyz18e7_f64test.rs  xyz8e5.rs  xyz9e2.rs
src/glsl/: rgb9e5.glsl  xyz13e6.glsl  xyz18e7.glsl  xyz8e5.glsl
src/wgsl/: rgb9e5.wgsl  xyz13e6.wgsl  xyz18e7.wgsl  xyz8e5.wgsl
