[package]
name = "shared_exponent_formats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
half = "2.3.1"
glam = "0.24.1"
rand = "0.8.5"

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[profile.test]
opt-level = 3
